Add some targets for easier monitoring and debugging.